--- a/style/select.css
+++ b/style/select.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: white;
     background-color: #e31f2b;
     margin: 0px;
