--- a/style/locales.css
+++ b/style/locales.css
@@ -42,6 +42,45 @@ body {
   margin-bottom: 10px;
 }
 
+.mopt {
+  margin: 15px 0px 0px 15px;
+  display: flex;
+  flex-flow: column;
+} 
+
+.method-title {
+  font-size: 17px;
+  position: relative;
+  flex: 1 1 auto;
+}
+
+.mcont {
+  flex: 1 1 auto;
+  display: flex;
+  flex-flow: row;
+  width: 100%;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+.method {
+  flex: 1 1 auto;
+  padding: 5px 10px 5px 10px;
+  margin: 5px 7px 5px 0px;
+  text-align: center;
+  justify-content: center;
+  border-radius: 25px;
+  border-width: 2px;
+  border-color: white;
+  border-style: solid;
+  background-color: #e31f2b;
+  color: white;
+}
+
+.method:hover {
+  cursor: pointer;
+}
+
 /********************************************************************/
 
 .header {
