common css and js created

--- a/style/select.css
+++ b/style/select.css
@@ -1,11 +1,4 @@
-body {
-    font-family: 'Poppins', sans-serif;
-    color: white;
-    background-color: #e31f2b;
-    margin: 0px;
-}
-
-.button {
+.button-back {
     flex: 1 1 auto;
     width:fit-content;
     height: fit-content;
@@ -111,112 +104,4 @@ body {
     width: 100%;
     height: 100%;
     margin: none;
-}
-
-.divider {
-    border-top: 2.5px solid white;
-    width: 95%;
-    border-radius: 5px;
-    margin:0px;
-    margin-top: 15px;
-    margin-bottom: 10px;
-}
-  
-
-/********************************************************************/
-
-.header {
-    display: flex;
-    flex-flow: row;
-    margin:15px;
-}
-
-.micon {
-    flex: 0 0 auto;
-    position: relative;
-}
-
-.title {
-    font-size: xx-large;
-    font-weight: 700;
-    flex: 1 1 auto;
-    position: relative;
-    padding-left: 10px;
-}
-
-.tmenu-icon {
-    flex: 0 0 auto;
-    position: relative;
-    align-self: flex-end;
-    padding-left: 20px;
-}
-
-.sidenav {
-    height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    left: 0;
-    background-color: #e31f2b; /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-}
-
-.sidenav-option {
-    display: flex;
-    margin-left: 20px;
-    flex-flow: row;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.sidenav-icon {
-    height: 35px;
-    width: 35px;
-}
-
-.sidenav a {
-    margin-left: 15px;
-    padding-top: 2px;
-    text-decoration: none;
-    flex: 1 1 auto;
-    position: relative;
-    font-size: 20px;
-    color: white;
-    display: block;
-    transition: 0.3s;
-}
-
-.sidenav a:hover {
-    color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-
-#main {
-    transition: margin-left .5s;
-    padding: 20px;
-}
-
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 10px;}
-}
-
-.menu-icon {
-    width: 30px;
-    height: 30px;
-    padding-top: 9px;
-}
-
-#img {
-    filter: brightness(0) invert(1);
 }
