--- a/style/common.css
+++ b/style/common.css
@@ -5,6 +5,24 @@ body {
     margin: 0px;
 }
 
+.slideshow {
+    display: none;
+    margin:none;
+}
+
+.slideshow-container {
+    width: 100%;
+    height: 100%;
+    margin: none;
+}
+
+.image {
+    width: 100%;
+    min-width: 200;
+    height: 100%;
+    min-height: 200;
+}
+
 .micon {
     flex: 0 0 auto;
     position: relative;
