--- a/style/locales.css
+++ b/style/locales.css
@@ -15,7 +15,6 @@
   position: relative;
   margin: 0px;
   margin-top: 11px;
-  
 }
 
 .location-description {
@@ -55,7 +54,7 @@
   white-space: nowrap;
 }
 
-#m1, #m2, #m3 {
+.method {
   flex: 1 1 auto;
   padding: 5px 10px 5px 10px;
   margin: 5px 7px 5px 0px;
