--- a/style/select.css
+++ b/style/select.css
@@ -1,5 +1,5 @@
 .button-back {
-    flex: 1 1 auto;
+    flex: 0 0 auto;
     width:fit-content;
     height: fit-content;
     position: relative;
@@ -13,7 +13,7 @@
     padding: 3px;
     padding-right: 5px;
     padding-bottom: 5px;
-  }
+}
 
 .icon{
     width: 30px;
@@ -22,12 +22,11 @@
 }
 
 .location{
-    flex: 1 1 auto;
     width:max-content;
     position: relative;
     display:flex;
-    flex-flow: row;
     flex: 1 1 auto;
+    flex-flow: row;
     border-radius: 10px;
     border-width: 1.5px;
     border-color: white;
@@ -42,7 +41,7 @@
     margin-bottom: 3px;
 }
 
-.text {
+.ltext {
     position: relative;
     flex: 1 1 auto;
     margin: none;
@@ -86,22 +85,4 @@
 
 #img {
     filter: brightness(0) invert(1);
-}
-
-.image {
-    width: 100%;
-    min-width: 200;
-    height: 100%;
-    min-height: 200;
-}
-
-.slideshow {
-    display: none;
-    margin:none;
-}
-
-.slideshow-container {
-    width: 100%;
-    height: 100%;
-    margin: none;
 }
