--- a/style/common.css
+++ b/style/common.css
@@ -46,8 +46,12 @@ body {
 .header {
     display: flex;
     flex-flow: row;
-    margin:15px;
+    box-sizing: border-box;
+    padding:15px;
     color: white;
+    background-color: #e31f2b; /* Black*/
+    width: 100%;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.4);
 }
 
 .sidenav {
@@ -170,14 +174,4 @@ body {
 
 #img {
 filter: brightness(0) invert(1);
-}
-
-.header-background {
-    width: 100%;
-    height: 75px;
-    position: absolute;
-    background-color: #e31f2b;
-    box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.4);
-    top: 0;
-    left: 0;
 }
