--- a/style/common.css
+++ b/style/common.css
@@ -175,3 +175,14 @@ body {
 #img {
 filter: brightness(0) invert(1);
 }
+
+.invisible {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
